# Student-Handbook-Agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_queries.md  test_scan_pages.py
RAG/: Embedder.py  __init__.py  ingest.py  retriever.py  test-embedder.py
